--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.11.0"
   },
   "scripts": {
-    "scss": "node-sass --watch scss -o css"
+    "scss": "node-sass --watch scss -o css",
+    "start": "npm run scss"
   }
 }
