--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "cocoen": "^2.0.5",
     "node-sass": "^4.11.0"
   },
   "scripts": {
